Migrated from legacy sun.misc.Base64Decoder to java.util.Base64